[package]
name = "cross-the-road"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.29.1"
bevy_common_assets = { version = "0.12.0", features = ["json"] }
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
serde_json = "1.0.138"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
